<resources>
    <string name="app_name">Muli pati?</string>
    <string name="skip">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="find_your_way_around">Find your way around</string>
    <string name="book_rides_from_the_list_of_rides_here_find_your_way_around_town">Book a trip from the list of rides near you.</string>
    <string name="image">image</string>
    <string name="icon">icon</string>
    <string name="connect_to_your_ride">Connect to your ride</string>
    <string name="fast_transportation_using_your_mobile_phone_in_malawi">Your trip is just few clicks away</string>
    <string name="we_will_take_you_there">We will take you there</string>
    <string name="book_transportation_ahead_of_your_journey">Book transportation ahead of your journey</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone_number">Phone number</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="today_10_30_am">Today, 10:30 AM</string>
    <string name="kanjedza_limbe">Kanjedza - Limbe</string>
    <string name="jerome_msapha">Jerome Msapha</string>
    <string name="blantyre_lilongwe">Blantyre - Lilongwe</string>
    <string name="_1_february_2020_11_21_am">1 February, 2020 - 11:21 AM</string>
    <string name="your_location_email_address_accounts">Your location, email address, accounts</string>
    <string name="active_trips">Active trips</string>
    <string name="_0">0</string>
    <string name="dots">dots</string>
    <string name="where_would_you_want_to_go_today">Where would you want to go?</string>
    <string name="search_for_trips">Search for trips by destination...</string>
    <string name="trips_near_you">Trips near you</string>
    <string name="personal_info">Personal info</string>
    <string name="jerome_msampha">Jerome Msampha</string>
    <string name="upcoming_trips">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="_15">15</string>
    <string name="_3">3</string>
    <string name="completed">Completed</string>
    <string name="user_details">User details</string>
    <string name="email_address">Email address</string>
    <string name="permanently_delete_this_account">Permanently delete this account</string>
    <string name="account_deactivation">Account deactivation</string>
    <string name="phone_no">+265 999 67 99 75</string>
    <string name="general">General</string>
    <string name="currents_trips_trip_history">Currents trips, trip history</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_and_support">Contact and support</string>
    <string name="log_out">Log out</string>
    <string name="app_settings">App settings</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="recent">Recent</string>
    <string name="notifications">Notifications</string>
    <string name="viewed">VIEWED</string>
    <string name="trips_catalogue">Trips catalogue</string>
    <string name="allow_phone_to_receive_notifications">Allow phone to receive notifications</string>
    <string name="theme">Theme</string>
    <string name="toggle_dark_theme">Toggle dark theme</string>
    <string name="hello_can_we_help_you">Hello can we help you?</string>
    <string name="update_your_user_avatar">Update your user avatar</string>
    <string name="reset_password">Reset password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="_12_32_pm">12:32 PM</string>
    <string name="access_your_location">ACCESS YOUR LOCATION</string>
    <string name="the_golden_rule_of_super_ants_is_location_please_enable_location_to_get_your_services">The golden rule of super ants is location. Please enable location to get your services.</string>
    <string name="do_not_allow">Do not allow</string>
    <string name="enable_location_service">Enable location service</string>
    <string name="_3_february_2021_12_05_pm">3 February 2021 - 12:05 PM</string>
    <string name="blantyre_zomba">Blantyre - Zomba</string>
    <string name="you_have_successfully_booked_this_trip">You have successfully booked this trip!</string>
    <string name="create_account">Create</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="current_avatar">Current avatar</string>
    <string name="continue_r">Continue</string>
    <string name="_265_999_67_99_75">+265 999 67 99 75</string>
    <string name="location">Location</string>
    <string name="continue_to_sign_in">Continue to sign in</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="skipper">Skip</string>
    <string name="dummy_date">23 January, 2021</string>
    <string name="summary">Summary</string>
    <string name="per_passenger">Per passenger</string>
    <string name="trip_date">TRIP DATE</string>
    <string name="pick_up_place">PICK UP PLACE</string>
    <string name="book_this_trip">Book this trip</string>
    <string name="enter_chat">Enter chat</string>
    <string name="update_your_personal_details">Update your personal details</string>
    <string name="finish">Finish</string>
    <string name="default_notification_channel_id">Muli pati</string>
    <string name="records_not_present">Records not present</string>
    <string name="illustration">illustration</string>
    <string name="yesterday">Yesterday</string>
    <string name="see_all_2">See All (2)</string>
    <string name="no_records_found">No records found</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="contact_amp_support"><![CDATA[Contact & support]]></string>
    <string name="clear_chat">Clear chat</string>
    <string name="cancel">Cancel</string>
    <string name="allow_app_to_use_your_location">Allow app to use your location</string>
    <string name="start_typing">Start typing...</string>
    <string name="muli_pati_user">Muli pati user</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_your_phone_number_below_we_will_send_you_an_sms_with_a_pin_code_to_confirm_your_identity">Enter your phone number below. We will send you an SMS with a pin code to confirm your identity.</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_pin_code_sent_to_your_mobile_phone">Enter the pin code sent to your mobile phone.</string>
    <string name="aster">*</string>
    <string name="already_registered">Already Registered?</string>
    <string name="new_password">New password</string>
    <string name="muli_pati">Muli pati?</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="about">About</string>
    <string name="muli_pati_mobile_transport_service_is_a_malawian_transportation_system_it_offers_users_transport_from_trips_going_on_around_their_area_of_proximity">Muli pati mobile transport service is a malawian transportation system. It offers users transport from trips going on around their area of proximity.</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="by_creating_an_account_you_agree_to_all_the_terms_and_conditions_of_muli_pati_mobile_transportation_service_drivers_should_register_to_our_service_using_the_muli_pati_driver_app">By creating an account, you agree to all the terms and conditions of Muli pati mobile transportation service. Drivers should register to our service using the Muli pati driver app.</string>
    <string name="store">Store</string>
    <string name="user_app">User app</string>
    <string name="google_playstore">Google PlayStore</string>
    <string name="driver_app">Driver app</string>
    <string name="google_playstore">Google PlayStore</string>


    <string-array name="districts">
        <item>BLANTYRE</item>
        <item>LILONGWE</item>
        <item>MZUZU</item>
    </string-array>

</resources>