<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingNotificationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_your_location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_city"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_golden_rule_of_super_ants_is_location_please_enable_location_to_get_your_services"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="100dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/enable_location_service"
                android:background="@drawable/button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_allow"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColor="?tabIndicatorColor"
                />
        </LinearLayout>
    </RelativeLayout>

</layout>