<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboard.ThirdSlider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:textColor="@color/red"
                android:id="@+id/skip"
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/skip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/three"
            android:layout_marginTop="170dp"
            android:layout_gravity="center"
            android:id="@+id/sliderImage"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_will_take_you_there"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_transportation_ahead_of_your_journey"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        </LinearLayout>
    </ScrollView>

</layout>