<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboard.SecondSlider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/second"
            android:id="@+id/secondImage"
            android:layout_marginTop="170dp"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_your_ride"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_transportation_using_your_mobile_phone_in_malawi"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        </LinearLayout>
    </ScrollView>

</layout>