<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cancelContainer"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_decagram"
            android:layout_margin="10dp"
            app:tint="?tabIndicatorColor"
            android:contentDescription="@string/image" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blantyre_lilongwe"
                android:id="@+id/cancelledTitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_february_2020_11_21_am"
                android:textSize="12sp"
                android:id="@+id/cancelledDate"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/cancelledMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_vert"
                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/image" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_wechat"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:tint="#969696"
        android:id="@+id/toChat"
        android:contentDescription="@string/icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC"
        android:layout_margin="10dp"
        />
</LinearLayout>